[tool.poetry]
package-mode = false

[project]
name = "2024-2-acheiunb"
version = "0.1.0"
description = ""

authors = [{ name = "samuelncaetano", email = "samueln.caetano42@gmail.com" }]

readme = "README.md"

requires-python = ">=3.12"
dependencies = ["requests (>=2.34.2,<3.0.0)", "python-dotenv (>=1.2.2,<2.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["types-requests (>=2.33.0.20260518,<3.0.0.0)"]
